Fix more text-overflow issues

--- a/src/web/styles.scss
+++ b/src/web/styles.scss
@@ -70,10 +70,14 @@ h6,
 
 .modal-header {
   padding: .75rem 1rem;
+  word-break: break-word !important;
+  word-wrap: break-word !important;
 }
 
 .modal-body {
   padding: 1rem 1.25rem;
+  word-break: break-word !important;
+  word-wrap: break-word !important;
 }
 
 .modal-footer {
